# prism

./: .gitignore  README.md  example_config.json  pyproject.toml
.github/workflows/: test.yml
docs/: taginfo.json
prism/: cli.py
prism/input/osm/: exporter.py
prism/input/osm/handlers/: __init__.py  geom_builder.py  node_handler.py  relation_handler.py  way_handler.py
prism/misc/: config.py  helpers.py  models.py
prism/output/: csv_writer.py
prism/output/csv/: builders.py  csv_writer.py
prism/output/gtfs/: gtfs_writer.py
prism/output/gtfs/builders/: __init__.py  agency_builder.py  fares_builder.py  route_builder.py  schedule_builder.py  shape_builder.py  stop_builder.py
tests/: conftest.py  test_config.py  test_csv_builders.py  test_gtfs_builders.py  test_gtfs_external_validation.py  test_osm_extraction.py  test_prism.py
tests/data/osm/: abidjan_test_data.osm.pbf
