[tool.poetry]
name = "prism"
version = "0.1.0"
description = ""
authors = ["Noémie Lehuby <noemie.lehuby@zaclys.net>"]

[tool.poetry.dependencies]
python = "^3.8"
webcolors = "^1.11.1"
transporthours = "^0.0.4"
osmium = "^3.1.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.13.0"
black = {version = "^21.7b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
